sistemazione service, facade, swagger