@@ -1,4 +1,4 @@
-package com.project.tesi.facade;
+package com.project.tesi.facade.impl;
 
 import com.project.tesi.dto.request.ModeratorUserUpdateRequest;
 import com.project.tesi.dto.request.PlanCreateRequestDTO;
@@ -7,6 +7,8 @@ import com.project.tesi.dto.response.PlanResponseDTO;
 import com.project.tesi.dto.response.SubscriptionResponseDTO;
 import com.project.tesi.dto.response.UserResponseDTO;
 import com.project.tesi.dto.response.stats.AdminStatsResponse;
+import com.project.tesi.facade.FacadeMapper;
+import com.project.tesi.facade.IAdminFacade;
 import com.project.tesi.service.AdminService;
 import com.project.tesi.service.AdminStatsService;
 import org.springframework.stereotype.Component;
@@ -15,62 +17,71 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 /**
- * Facade per il pannello di amministrazione.
- * Nasconde la complessità dei service (AdminService, AdminStatsService) dietro 
- * un'unica interfaccia, evitando di iniettare troppe dipendenze nel controller.
+ * Implementazione del facade per il pannello di amministrazione.
  */
 @Component
-public class AdminFacade {
+public class AdminFacadeImpl implements IAdminFacade {
 
     private final AdminService adminService;
     private final AdminStatsService adminStatsService;
+    private final FacadeMapper facadeMapper;
 
-    // Costruttore esplicito — pattern Facade
-    public AdminFacade(AdminService adminService, AdminStatsService adminStatsService) {
+    public AdminFacadeImpl(AdminService adminService, AdminStatsService adminStatsService, FacadeMapper facadeMapper) {
         this.adminService = adminService;
         this.adminStatsService = adminStatsService;
+        this.facadeMapper = facadeMapper;
     }
 
+    @Override
     public List<UserResponseDTO> getAllUsers() {
         return adminService.getAllUsers().stream()
-                .map(FacadeMapper::mapToUserResponse)
-                .collect(Collectors.toList());
+                .map(facadeMapper::mapToUserResponse)
+                .toList();
     }
 
+    @Override
     public UserResponseDTO createUser(UserCreateRequestDTO request) {
-        return FacadeMapper.mapToUserResponse(adminService.createUser(request));
+        return facadeMapper.mapToUserResponse(adminService.createUser(request));
     }
 
+    @Override
     public void deleteUser(Long id) {
         adminService.deleteUser(id);
     }
 
+    @Override
     public List<SubscriptionResponseDTO> getAllSubscriptions() {
         return adminService.getAllSubscriptions().stream()
-                .map(FacadeMapper::mapToSubscriptionResponse)
+                .map(facadeMapper::mapToSubscriptionResponse)
                 .collect(Collectors.toList());
     }
 
+    @Override
     public SubscriptionResponseDTO updateSubscriptionCredits(Long id, int pt, int nutri) {
-        return FacadeMapper.mapToSubscriptionResponse(adminService.updateSubscriptionCredits(id, pt, nutri));
+        return facadeMapper.mapToSubscriptionResponse(adminService.updateSubscriptionCredits(id, pt, nutri));
     }
 
+    @Override
     public UserResponseDTO updateUser(Long id, ModeratorUserUpdateRequest request) {
-        return FacadeMapper.mapToUserResponse(adminService.updateUser(id, request));
+        return facadeMapper.mapToUserResponse(adminService.updateUser(id, request));
     }
 
+    @Override
     public PlanResponseDTO createPlan(PlanCreateRequestDTO request) {
-        return FacadeMapper.mapToPlanResponse(adminService.createPlan(request));
+        return facadeMapper.mapToPlanResponse(adminService.createPlan(request));
     }
 
+    @Override
     public PlanResponseDTO updatePlan(Long id, PlanCreateRequestDTO request) {
-        return FacadeMapper.mapToPlanResponse(adminService.updatePlan(id, request));
+        return facadeMapper.mapToPlanResponse(adminService.updatePlan(id, request));
     }
 
+    @Override
     public void deletePlan(Long id) {
         adminService.deletePlan(id);
     }
 
+    @Override
     public AdminStatsResponse getAdminStats() {
         return adminStatsService.getAdminStats();
     }
